cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(ndt)
set(CMAKE_CXX_STANDARD 11)
find_package(PCL 1.2 REQUIRED)
find_package(OpenCV REQUIRED)
find_package(nlohmann_json 3.2.0 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (ndt NdtOctree_re.h visualizer.h utils.h main_tum_yolact_re.cpp SettingReader.h)
target_link_libraries (ndt ${PCL_LIBRARIES} ${OpenCV_LIBS})